# oop-learning-repo

./: README.md
C++/docs/: 0_introduction.md  1_class.md  2_inheritance.md  3_polymorphism.md  4_encapsulation.md  5_abstraction.md
C++/project/Library Management System/: CMakeLists.txt  README.md
C++/project/Library Management System/src/: main.cpp
C++/project/Library Management System/src/Core/Database/: LoanRequestDB.cpp  LoanRequestDB.h  ReadListDB.cpp  ReadListDB.h
C++/project/Library Management System/src/Core/LoanService/: LoanService.cpp  LoanService.h
C++/project/Library Management System/src/Core/OnlineBookService/: OnlineBookService.cpp  OnlineBookService.h
C++/project/Library Management System/src/Core/RecommenderService/: RecommenderService.cpp  RecommenderService.h
C++/project/Library Management System/src/Core/Utils/: StringUtils.cpp  StringUtils.h
C++/project/Library Management System/src/UI/LoanUI/: LoanUI.cpp  LoanUI.h
C++/project/Library Management System/src/UI/MainMenuUI/: MainMenuUI.cpp  MainMenuUI.h
C++/project/Library Management System/src/UI/OnlineBookUI/: OnlineBookUI.cpp  OnlineBookUI.h
C++/project/Library Management System/src/UI/RecommenderUI/: RecommenderUI.cpp  RecommenderUI.h
C++/project/Library Management System/tests/: LoanTest.cpp  RecommenderTest.cpp  SearchTest.cpp
Python/docs/: 0_introduction.md  2_inheritance.md  3_polymorphism.md  4_encapsulation.md  5_abstraction.md  6_magic “Dunder” methods.md
Python/project/student_management/: README.md  pyproject.toml
Python/project/student_management/student_management/: course.py
Python/project/student_management/tests/: test_instructor.py
docs/: 1_class.md  2_inheritance.md  4_encapsulation.md  5_abstraction.md
project/student_management/: test_cli.sh
project/student_management/student_management/: __init__.py  instructor.py
project/student_management/tests/: test_person.py
projects/student_management/: .gitignore  sms_data.json
projects/student_management/code/: person.py
projects/student_management/student_management/: person.py  sms_cli.py  sms_data.py  student.py  transcript.py
projects/student_management/tests/: test_course.py  test_student.py  test_transcript.py
