[project]
name = "student_management"
version = "0.1.0"
description = "A simple student management system using OOP in Python."
authors = [
    { name = "Amr Yasser", email = "amr.yasser200.26@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pytest"
]

[project.scripts]
sms = "student_management.sms_cli:main"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
